--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background: #F3F4FB;
+}
+
+.bg-network {
+  background: url(/images/back-network.svg) top right no-repeat;
+}
